Refactored client side JS
Still more to go! Also added skeleton mode and progress bar to IDE

--- a/lib/extensions/report_core/templates/reportOptions.htm
+++ b/lib/extensions/report_core/templates/reportOptions.htm
@@ -4,8 +4,9 @@
 	<select id="reportView">
 		{{> reportOptionViews}}
 	</select>
-	<a href="#" id="detail_button">Toggle Detail</a>
+	<a href="#" id="detail_button">Detail</a>
 	<div id="icons" class="ui-widget icon-collection" style="float:right">
 		<div class="ui-state-default ui-corner-all" style="float:left; padding:4px;"><span class="ui-icon ui-icon-arrow-4-diag" style="width:16px; height:16px;"></span></div>
 	</div>
+	{{> reportOptionsExtensions}}
 </div>
