--- a/lib/extensions/report_core/templates/scripts.htm
+++ b/lib/extensions/report_core/templates/scripts.htm
@@ -1,3 +1,5 @@
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/lib.js"></script>
 <script type="text/javascript" src="js/jstree/jquery.jstree.js"></script>
-{{> scriptsMain}}
+{{> scriptsExtensions}}
+{{> scriptsControl}}
+<script type="text/javascript" src="js/main.js"></script>
