--- a/lib/extensions/report_core/templates/scriptsControl.htm
+++ b/lib/extensions/report_core/templates/scriptsControl.htm
@@ -1,2 +1,2 @@
 <script type="text/javascript" src="glossary_definitions.js"></script>
-<script type="text/javascript" src="js/static.js"></script>
+<script type="text/javascript" src="js/staticControl.js"></script>
