--- a/lib/extensions/report_core/templates/summary.htm
+++ b/lib/extensions/report_core/templates/summary.htm
@@ -1,14 +1,14 @@
 <span class="label result {{summary.status}}">{{summary.status}}</span>
 <div class="stats">	
 	<div class="group">
-		<span class="label">Scenarios : </span> {{summary.scenarios.count}}<br/>
+		<span class="label">Scenarios : </span> {{summary.scenarioCount}}<br/>
 		<span class="label indent passed">Passed : </span> {{summary.scenarios.passed}}<br/>
 		<span class="label indent failed">Failed : </span> {{summary.scenarios.failed}}<br/>
 		<span class="label indent stepless">Stepless : </span> {{summary.scenarios.stepless}}<br/>
 		<span class="label indent undefined">Undefined : </span> {{summary.scenarios.undefined}}<br/>
 	</div>
 	<div class="group">
-		<span class="label">Features : </span> {{summary.features.count}}<br/>
+		<span class="label">Features : </span> {{summary.featureCount}}<br/>
 		<span class="label indent passed">Passed : </span> {{summary.features.passed}}<br/>
 		<span class="label indent failed">Failed : </span> {{summary.features.failed}}<br/>
 		<span class="label indent stepless">Stepless : </span> {{summary.features.stepless}}<br/>
