--- a/lib/extensions/test_suite/templates/scriptsExtensions.htm
+++ b/lib/extensions/test_suite/templates/scriptsExtensions.htm
@@ -1,2 +1,2 @@
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="js/ide.js"></script>		
+<script type="text/javascript" src="js/cukeTreeIde.js"></script>		
