Renamed skeleton mode to dry run

--- a/lib/extensions/test_suite/templates/reportOptionsExtensions.htm
+++ b/lib/extensions/test_suite/templates/reportOptionsExtensions.htm
@@ -1,2 +1,2 @@
-<label for="skeletonMode">Skeleton</label><input type="checkbox" id="skeletonMode"/>
+<label for="dryRunMode">Dry Run</label><input type="checkbox" id="dryRunMode"/>
 <div id="progressBar"></div>
