--- a/lib/extensions/report_core/assets/css/style.css
+++ b/lib/extensions/report_core/assets/css/style.css
@@ -49,6 +49,10 @@ h1.connected {
 	font-weight:bold;
 }
 
+/* Icons */
+ul#icons {margin: 0; padding: 0;}
+ul#icons li {margin: 2px; position: relative; padding: 4px 0; cursor: pointer; float: left;  list-style: none;}
+ul#icons span.ui-icon {float: left; margin: 0 4px;}
 
 /* CSS Fix */
 .clearfix:after {
