--- a/lib/extensions/report_core/templates/scenario.htm
+++ b/lib/extensions/report_core/templates/scenario.htm
@@ -1,6 +1,6 @@
 <li data-type="scenario" id="{{hashCode name}}" class="{{#hasFailed result.status}}jstree-open{{else}}jstree-closed{{/hasFailed}} node-{{result.status}} scenario-{{result.status}}">
 	<a data-mingle-url="{{mingleUrl}}"><ins class="jstree-icon">&#160;</ins>
-		{{#if tags}}&lt;{{#tags}}{{name}}{{/tags}}&gt;{{/if}}
+		{{#if tags}}{{#tags}}{{name}}&nbsp;{{/tags}}{{/if}}
 		{{name}}
 	</a>
 	<ul>
