--- a/lib/extensions/report_core/templates/reportOptions.htm
+++ b/lib/extensions/report_core/templates/reportOptions.htm
@@ -1,12 +1,10 @@
 <div id="report_options" class="quicknav ui-corner-all">
-	<label for="toggle_visible">Hide successful</label><input type="checkbox" id="toggle_visible">
-	<label for="reportView">View Mode</label>
 	<select id="reportView">
 		{{> reportOptionViews}}
 	</select>
-	<a href="#" id="detail_button">Detail</a>
-	<div id="icons" class="ui-widget icon-collection" style="float:right">
-		<div class="ui-state-default ui-corner-all" style="float:left; padding:4px;"><span class="ui-icon ui-icon-arrow-4-diag" style="width:16px; height:16px;"></span></div>
-	</div>
+	<label for="toggle_visible">Hide successful</label><input type="checkbox" id="toggle_visible">
 	{{> reportOptionsExtensions}}
+	<div id="icons" class="ui-widget icon-collection" style="display:inline-block">
+		<div id="detail_button" class="ui-state-default ui-corner-all" style="float:left; padding:4px;"><span class="ui-icon ui-icon-note" style="width:16px; height:16px;"></span></div>
+	</div>
 </div>
