Refactored for extensibility
# Added dynamic assets for extensions (bit ugly at the moment)
# Restructured templates to allow for greater flexibility

--- a/lib/extensions/report_core/templates/detail.htm
+++ b/lib/extensions/report_core/templates/detail.htm
@@ -5,4 +5,5 @@
 	<h3>Detail</h3>
 	<label for="detail_name">Name :</label><span id="detail_name" class="detail-name"></span>
 	<div id="detail_steps" class="detail-info"></div>					
+	{{> detailFooter}}
 </div>
