Refactored more client side JS
# Converted element and state manager into jquery plugins
# Re-added keyword to step names in reports

--- a/lib/extensions/report_core/assets/css/report.css
+++ b/lib/extensions/report_core/assets/css/report.css
@@ -123,3 +123,6 @@
 .step-undefined > a > ins {
 	background:url("../images/icons/arrow_blue.png") 0px 0px !important;
 }
+.step .keyword {
+	font-style:italic;
+}
