--- a/lib/extensions/report_core/templates/scenario.htm
+++ b/lib/extensions/report_core/templates/scenario.htm
@@ -7,9 +7,9 @@
 		{{#steps}}
 		<li data-type="step"
 			{{> stepNodeAttributes}}
-			class="node-{{result.status}} step-{{result.status}}">
+			class="step node-{{result.status}} step-{{result.status}}">
 			<a><ins class="jstree-icon step">&#160;</ins>
-				{{name}}
+				<span class="keyword">{{keyword}}</span>{{name}}
 			</a>
 			{{#if rows}}
 				<table>
