--- a/lib/extensions/report_core/assets/css/report.css
+++ b/lib/extensions/report_core/assets/css/report.css
@@ -7,7 +7,7 @@
 #report a {
 	cursor:default;
 }
-#reportTree, #storyTree, #scenarioTree {
+#reportTree, #storyTree {
 	background-color:white;
 	overflow:auto;
 }
