--- a/lib/extensions/report_core/templates/menu.htm
+++ b/lib/extensions/report_core/templates/menu.htm
@@ -1,5 +1,6 @@
 <div class="quicknav ui-widget-content ui-corner-all">
-	<h3>Menu : </h3>
+	<h3 class="cuke-tree-title">CukeTree</h3>
+	<!--<img src="http://cukes.info/images/cuke_logo.png" class="cuke-logo"/>-->
 	
 	{{> menuItems}}
 </div>
