--- a/lib/extensions/report_core/templates/reportOptions.htm
+++ b/lib/extensions/report_core/templates/reportOptions.htm
@@ -1,4 +1,4 @@
-<div id="report_options" class="quicknav ui-corner-all">
+<div id="report_options" class="quicknav ui-widget-content ui-corner-all">
 	<select id="reportView">
 		{{> reportOptionViews}}
 	</select>
