--- a/lib/extensions/report_core/templates/scenario.htm
+++ b/lib/extensions/report_core/templates/scenario.htm
@@ -1,4 +1,4 @@
-<li data-type="scenario" id="{{hashCode name}}" class="{{#hasFailed result.status}}jstree-open{{else}}jstree-closed{{/hasFailed}} node-{{result.status}} scenario-{{result.status}}">
+<li data-type="scenario" id="{{hashCode id}}" class="jstree-closed node-{{result.status}} scenario-{{result.status}}">
 	<a data-mingle-url="{{mingleUrl}}"><ins class="jstree-icon">&#160;</ins>
 		{{#if tags}}{{#tags}}{{name}}&nbsp;{{/tags}}{{/if}}
 		{{name}}
