--- a/lib/extensions/test_suite/templates/menuItems.htm
+++ b/lib/extensions/test_suite/templates/menuItems.htm
@@ -30,3 +30,5 @@
 <a id="addToGlossary" href="#">Add to Glossary...</a>
 &nbsp;|&nbsp;
 <a href="#" id="runTests">Run All Tests</a>
+
+<div id="statusBar">Not connected.</div>
