--- a/lib/extensions/report_core/templates/detail.htm
+++ b/lib/extensions/report_core/templates/detail.htm
@@ -1,9 +1,13 @@
 <div id="detail">
-	<div id="detailTools">
-		{{> detailTools}}
+	<div id="detailContent">
+		<div id="detailTools">
+			{{> detailTools}}
+		</div>
+		<h3>Detail - <span id="detailCount">0 items</span></h3>
+
+		<label for="detail_name">Name :</label><span id="detail_name" class="detail-name"></span>
+		<div id="detail_steps" class="detail-info"></div>					
+		{{> detailFooter}}
 	</div>
-	<h3>Detail</h3>
-	<label for="detail_name">Name :</label><span id="detail_name" class="detail-name"></span>
-	<div id="detail_steps" class="detail-info"></div>					
-	{{> detailFooter}}
 </div>
+<div id="detailResize"></div>
