--- a/lib/extensions/report_core/templates/steps.htm
+++ b/lib/extensions/report_core/templates/steps.htm
@@ -1,4 +1,4 @@
-<h3>Moneysupermarket (MSM 2.0) Step Definitions</h3>
+<h3>Step Definitions</h3>
 
 <span class="step-count-label">Step Count : {{countStepsInFile stepFiles}}</span>
 
