--- a/lib/extensions/report_core/templates/scenario.htm
+++ b/lib/extensions/report_core/templates/scenario.htm
@@ -22,6 +22,13 @@
 					{{/rows}}
 				</table>
 			{{/if}}
+
+      {{#if result.error_message}}
+      <div class="error"><pre>{{result.error_message}}</pre></div>
+      {{/if}}
+      {{#embeddings}}
+      <div class="embeddings"><a target="_blank" href=""><img src="data:{{mime_type}};base64,{{data}}" /></a></div>
+      {{/embeddings}}
 		</li>
 		{{/steps}}
 	</ul>
