Added prototype lazy load to report tree
NOTE: This is only partially working, the report tree is not showing all
information.

--- a/lib/extensions/report_core/templates/scriptsControl.htm
+++ b/lib/extensions/report_core/templates/scriptsControl.htm
@@ -1,2 +1,3 @@
+<script type="text/javascript" src="structure.js"></script>
 <script type="text/javascript" src="glossary_definitions.js"></script>
 <script type="text/javascript" src="js/staticControl.js"></script>
